resolved navbar visible in mobile

--- a/assets/styles/mobile.css
+++ b/assets/styles/mobile.css
@@ -99,13 +99,13 @@
     flex-direction: column;
     cursor: pointer;
     justify-content: space-between;
+  }
 
-    .menu-bar {
-      display: block;
-      height: 3px;
-      width: 100%;
-      background-color: #ffffff;
-    }
+  .menu-bar {
+    display: block;
+    height: 3px;
+    width: 100%;
+    background-color: #ffffff;
   }
 
   nav {
@@ -266,6 +266,7 @@
 
   .download-options-m:last-child {
     width: 230px;
+    height: auto;
     margin-top: 15px;
   }
 
